troubleshooting joint build failure